# jailbird-release

./: .gitignore  LICENSE  README.md  SECURITY.md  jailbird.policy.yaml  jailbird.profile.yaml  pyproject.toml
.githooks/: pre-commit  pre-push  secret-scan.py
.github/workflows/: ci.yml  secret-scan.yml
docs/: CAPABILITY-MATRIX.md  FAN-OUT.md  SANDBOX.md
examples/01-hello-echo/: run.sh
examples/02-governed-deny/: no-push.policy.yaml  run.sh
examples/03-multi-model-relay/: design-build-qa.workflow.yaml  jailbird.profile.yaml  run.sh
examples/04-parallel-fan-out/: fan-out.workflow.yaml  run.sh
jailbird/: cli.py  policy.py  runner.py  types.py
jailbird/adapters/: __init__.py  antigravity.py  base.py  claude.py  codex.py  echo.py  echo_agent.py
jailbird/govern/: compile.py  hook.py  merge.py  preflight.py  provision.py
jailbird/router/: ledger.py  quota.py  router.py  strategies.py
scripts/: gen-demo-cast.py  gen-relay-cast.py  install-hooks.sh  pre-publish-check.sh  record-demo.sh
tests/: test_antigravity_adapter.py  test_antigravity_live.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_codex_live.py  test_compile.py  test_echo_adapter.py  test_examples.py  test_hook.py  test_ledger.py  test_no_personal_coupling.py  test_pipeline.py  test_policy.py  test_preflight.py  test_provision.py  test_quota.py  test_router.py  test_run_scripts.py  test_runner.py  test_smoke.py  test_strategies.py  test_types.py  test_workflow_spec.py
workflows/: cheap-bulk.yaml  design-build-qa.yaml  fan-out.yaml  plan-then-build.yaml  solo.yaml
(+3 files in other folders)
